# tiny-recursive-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
examples/: train_sudoku.rs
src/: config.rs  lib.rs  utils.rs
src/data/: mod.rs  numpy_dataset.rs
src/layers/: activations.rs  attention.rs  embeddings.rs  mod.rs  normalization.rs  positional.rs
src/models/: loader.rs  mod.rs
src/training/: checkpoint.rs  ema.rs  mod.rs  optimizer.rs  scheduler.rs  trainer.rs
