[package]
name = "tiny-recursive-rs"
version = "0.1.0"
edition = "2021"
authors = ["Blackfall Labs <opensource@blackfall.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/blackfall-labs/tiny-recursive-rs"
homepage = "https://github.com/blackfall-labs/tiny-recursive-rs"
documentation = "https://docs.rs/tiny-recursive-rs"
description = "Rust implementation of Tiny Recursive Models for efficient puzzle solving"
keywords = ["machine-learning", "transformer", "neural-network", "recursive", "puzzle"]
categories = ["algorithms", "science"]
readme = "README.md"
exclude = [
    "target/",
    "checkpoints*/",
    "*.log",
]

[[example]]
name = "train_sudoku"
path = "examples/train_sudoku.rs"

[dependencies]
# Tensor operations
candle-core = "0.8"
candle-nn = "0.8"
candle-optimisers = "0.10.0-alpha.1"

# Serialization
safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math & numerics
ndarray = "0.17"
ndarray-npy = "0.10"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
